# sim2d

./: .gitignore  README.md  pyproject.toml
scripts/: example.py  example_network.py  generate_training_data.py  training.py  visualize_graph.py  visualize_hdf5_pass.py  visualize_pt_graph.py
src/sim2d/: __init__.py  backward_euler.py  collisions.py  engine.py  logger.py  shapes.py  simulator.py
src/sim2d/gnn/: __init__.py  dataset.py  generate_training_data.py  my_network.py  network.py
